# battlecode26-engine

./: build.gradle
.github/workflows/: release-client.yml  release-engine.yml
client/: package-lock.json  package.json  tailwind.config.js
client/src/: client-config.tsx  colors.ts  constants.ts  error-boundary.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: main.rs  tauri_bridge.rs
client/src/components/: forms.tsx
client/src/components/controls-bar/: controls-bar-timeline.tsx
client/src/components/game/: game-renderer.tsx  tooltip.tsx
client/src/components/sidebar/: sidebar.tsx
client/src/pages/: main-page.tsx
client/src/playback/: Actions.ts  Bodies.ts  Brushes.ts  Game.ts  GameRenderer.ts  Map.ts  Round.ts  RoundStat.ts
engine/: .gitignore  build.gradle
engine/src/crossplay_python/: crossplay.py  main.py  python_docs.md  setup.py
engine/src/crossplay_python/battlecode/: runner.py
engine/src/crossplay_python/battlecode26/: __main__.py  classes.py
engine/src/main/crossplay_python/: runner.py
example-bots/src/crossplay_python/lectureplayer_py/: bot.py
example-bots/src/crossplay_python/pytest2/: bot.py
example-bots/src/main/colemanplayerv0v1/: RobotPlayer.java
maps/: TestMap.map26  cat.map26  catisolation.map26  randomMap.map26  ratIsolation.map26
schema/: battlecode.fbs  package.json
schema/js/battlecode/: schema.d.ts  schema.js
schema/ts/battlecode/: schema.ts
(+180 files in other folders)
