[package]
name = "battlecode-client"
version = "25.0.0"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-shell = "2.0"
ureq = { version = "2.9.1", features = ["json"] }
relative-path = "1.9.0"
where-is-it = { git = "https://github.com/TheApplePieGod/where-is-it.git" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

# Uncomment to enable devtools in release
#[profile.release.package.wry]
#debug = true
#debug-assertions = true
